Contrast fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,7 @@ a {
   text-decoration: none;
 }
 .link{
+  margin-top: 1rem;
   transition: all 50ms ease-in-out;
 }
 .link:hover{
@@ -184,6 +185,7 @@ width: 100%;
 }
 .product-price{
   font-weight: 800;
+  font-size: 1rem;
   margin-top: 6px;
   color: var(--thirdColor);
 }
@@ -288,7 +290,7 @@ z-index: 0;
 }
 .footer-banner-container{
   padding: 100px 40px;
-  background-color: var(--lightColor);
+  background-color: var(--thirdColor);
   border-radius: 15px;
   position: relative;
   height: 400px;
